ns-apps/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apps-network-policy

spec:
  podSelector:
    matchLabels:
      neoshowcase.trap.jp/app: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
          podSelector:
            matchLabels:
              app: mariadb
      ports:
        - protocol: TCP
          port: mariadb
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
          podSelector:
            matchLabels:
              app: mongo
      ports:
        - protocol: TCP
          port: mongo
